--- a/package.json
+++ b/package.json
@@ -4,12 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d distribute"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kikiriki367/cokolada.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "homepage":"https://kikiriki367.github.io/cokolada",
+  "bugs": {
+    "url": "https://github.com/kikiriki367/cokolada/issues"
+  },
+  "homepage": "https://github.com/kikiriki367/cokolada#readme",
   "dependencies": {
     "gh-pages": "^3.1.0"
   }
